# svzt-agent

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  pyproject.toml
docs/: AGENT_CONTEXT.md  ARCHITECTURE.md  AUTONOMY_ROADMAP.md  CONFIG_EVOLUTION.md  DECOMPOSITION_PLAN.md  EXECUTION.md  HPC_SAFETY.md  MANIFEST.md  MONITORING.md  OPERATOR_RUNBOOK.md  OPERATOR_UX_PLAN.md  PATIENT_DATA_CONTRACT.md  PLANNING.md  ROADMAP.md  STARTUP_PROMPT.md  TESTING.md  TEST_STRATEGY.md  conf.py  index.md
src/svztagent/: __init__.py  workspace_bootstrap.py
src/svztagent/campaigns/: __init__.py  adapt_benchmark.py  seed_sweep.py
src/svztagent/cli/: __init__.py  main.py
src/svztagent/config/: __init__.py  load.py  models.py
src/svztagent/core/: errors.py  manifest.py  monitor.py  paths.py  plan.py  plan_render.py  plan_validate.py  state.py  status.py  transitions.py
src/svztagent/hpc/: __init__.py  executor.py  fake.py  interfaces.py  local_fake.py  rsync.py  slurm.py  ssh.py
src/svztagent/maintenance/: __init__.py  update.py
src/svztagent/postprocess/: __init__.py  cfd_results.py  summarize.py  tuning_progress.py
src/svztagent/templates/slurm/: job_template.sh
src/svztagent/workflows/: adapt.py  paraview_viz.py  postop.py  postprocess.py  tune_trees.py
tests/: conftest.py  test_adapt_benchmark.py  test_adapt_workflow.py  test_auto_advance_watch.py  test_cfd_results_postprocess.py  test_config_loading.py  test_execution_plan_validation.py  test_fetch_artifacts.py  test_iteration_tracking.py  test_manifest_history.py  test_manifest_roundtrip.py  test_monitor_service.py  test_package_resources.py  test_paraview_viz_workflow.py  test_path_policy_enforcement.py  test_patient_path_resolution.py  test_plan_generation_dry_run.py  test_plan_pretty_print.py  test_plan_serialization.py  test_plan_step_model.py  test_postop_workflow.py  test_postprocess_centerline_timeseries.py  test_repository_locations.py  test_rsync_adapter.py  test_run_state_machine.py  test_run_tune_dry_run.py  test_run_tune_fake_execution.py  test_seed_sweep_campaign.py  test_slurm_adapter.py  test_slurm_state_normalization.py  test_software_update.py  test_ssh_adapter.py  test_status_normalization.py  test_svfsiplus_path_flow.py  test_tune_plan_generation.py  test_tuning_progress_postprocess.py  test_watch_command.py  test_workspace_bootstrap.py
