[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "svzt-agent"
version = "0.1.0"
description = "Deterministic orchestration for svZeroDTrees HPC workflows"
authors = [
  { name = "Nick Dorn", email = "ndorn@stanford.edu" },
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Distributed Computing",
]
keywords = [
  "hpc",
  "simvascular",
  "svzerodtrees",
  "workflow",
  "orchestration",
]
dependencies = [
  "PyYAML>=6.0",
  "pydantic>=2.6,<3",
]

[project.urls]
Homepage = "https://github.com/ncdorn/svzt-agent"
"Source Code" = "https://github.com/ncdorn/svzt-agent"
"Bug Tracker" = "https://github.com/ncdorn/svzt-agent/issues"
Documentation = "https://github.com/ncdorn/svzt-agent/tree/main/docs"
Download = "https://test.pypi.org/project/svzt-agent/"

[project.scripts]
svzt = "svztagent.cli.main:main"

[dependency-groups]
dev = [
  "hatch>=1.14",
  "pre-commit>=4.0",
]
tests = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
docs = [
  "myst-parser>=4.0",
  "pydata-sphinx-theme>=0.16",
  "sphinx~=8.0",
  "sphinx-autoapi>=3.6.0",
  "sphinx-autobuild>=2024.10.3",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
]
build = [
  "hatchling>=1.29",
  "twine>=6.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.paths]
source = [
  "src/svztagent",
  "*/site-packages/svztagent",
]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]
precision = 2

[tool.hatch.build]
only-packages = true

[tool.hatch.build.targets.wheel]
packages = ["src/svztagent"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/DEVELOPMENT.md",
  "/CODE_OF_CONDUCT.md",
  "/AGENTS.md",
]

[tool.hatch.envs.default]
installer = "uv"
dependency-groups = ["dev", "tests"]

[tool.hatch.envs.build]
description = "Build and validate source and wheel distributions."
installer = "uv"
dependency-groups = ["build"]
builder = true

[tool.hatch.envs.build.scripts]
check = [
  "python -m hatchling build",
  "twine check dist/*",
]

[tool.hatch.envs.test]
description = "Run the test suite."
installer = "uv"
dependency-groups = ["tests"]

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:--cov=svztagent --cov-report=term-missing --cov-report=xml}"

[tool.hatch.envs.docs]
description = "Build or serve the documentation."
installer = "uv"
dependency-groups = ["docs"]

[tool.hatch.envs.docs.scripts]
build = ["sphinx-build {args:-W -b html docs docs/_build/html}"]
serve = ["sphinx-autobuild docs --watch src/svztagent {args:-b html docs/_build/html}"]
